fix spacing in skills

--- a/src/Skills/Skills.scss
+++ b/src/Skills/Skills.scss
@@ -13,11 +13,10 @@
   }
   .skills {
     width: 100%;
-
     .skill-header {
       font-size: 26px;
       padding-left: 7.5vw;
-      padding-top: 5vh;
+      padding-top: 4.5vh;
     }
     .front-end-skill-header {
       font-size: 26px;
